--- a/HanboHong.bib
+++ b/HanboHong.bib
@@ -33,7 +33,7 @@
   number = {13-14},
   pages = {1894-1902},
   doi = {10.1002/(SICI)1521-3773(19990712)38:13/14<1894::AID-ANIE1894>3.0.CO;2-H},
-  annote = {In this article, the speaker talked about the criteria and procedures to develop a good theoretical model. He summarized the mechanics, advantages and disadvantages of different existing models including: Hartree-Fock, correlated, and general energy models. Finally, he compared the results of different models with experimental value and showed that there is no universally accurate method and raised the potential improvement.},
+  annote = {In this article, the speaker talked about the criteria and procedures to develop a good theoretical model. He summarized the mechanics, advantages and disadvantages of different existing models including: Hartree-Fock, correlated, and general energy models. Finally, he explained how these methods are developing and the way they reach the exact value based on the correlation and basis set.},
   keywords = {ab initio calculation, Hartree-Fock model, correlated model, general energy model},
 }
 
